stylesheet.css
:root {
    --ff-main: 'Be Vietnam Pro', sans-serif;
    --white: rgba(238, 234, 234, 0.884);

}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}


body {
    background-color: rgb(196, 196, 250);/*linear-gradient (#FF4500,#FF7D4D, #02dbf8, #91f1f1);
    background-image: url("/Users/casvalkyriespicer/Documents/GitHub/personal-dashboard/pics/landscape.jpeg"); 
    background-blend-mode: multiply;  /*https://unsplash.com/photos/NRQV-hBF10M
    opacity: 0.2;*/
    width: 100%;
    min-height: 100vh;
    height: 40em;
    margin: 0 auto; 
    background: no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    color: var(--white);
    font-family: var(--ff-main);
}

.container {
    display: grid;
    min-height: 100vh;
    grid-gap: 1em;
    grid-template-columns: repeat(3, .5fr);
    grid-template-rows: repeat(3, auto);
    text-align: center;
    align-items: center;
    justify-content: center;
}

.container__time {
    font-size: 5rem;
}

